<resources>
    <string name="app_name">Ademanos-Android-App</string>
    <string name="title_activity_profile_tab">profileTab</string>
    <string name="app_title">AdeManos</string>
    <string name="email_field_label">Email</string>
    <string name="password_field_label">Contraseña</string>
    <string name="login_button_label">Iniciar Sesión</string>
    <string name="logout_button_label">Cerrar Sesión</string>
    <string name="logo_description">Logo de la Aplicación</string>
    <string name="email_supporting_text">Ingresa un correo valido</string>
    <string name="password_supporting_text">Minimo 8 caracteres</string>
    <string name="login_failure_message">Ocurrió un error, verifica tu información</string>
    <string name="incorrect_login_message">"There is no user record corresponding to this identifier. The user may have been deleted."</string>
    <string name="loading_label">Cargando...</string>
    <string name="dictionary_title">Diccionario</string>
    <string name="quizz_title">Quizzes</string>
    <string name="generic_error">Ocurrió un error</string>
    <string name="retry">Reintentar</string>
    <string name="correct_test_email">prueba@tec.mx</string>
    <string name="correct_test_password">prueba1234</string>
    <string name="incorrect_test_email">wrongemail@tec.mx</string>
    <string name="incorrect_test_password">wrongpassword</string>
    <string name="invalid_email_format">invalidformat</string>
    <string name="invalid_password_length">123</string>
    <string name="profile_title">Perfil</string>
    <string name="profile_tab_test_id">Profile Tab</string>
    <string name="dictionary_tab_test_id">Dictionary Tab</string>
    <string name="quiz_tab_test_id">Quiz Tab</string>
    <string name="test_category">Hogar</string>
    <string name="test_word">Vaso</string>
    <string name="test_word_media_tag">https://storage.googleapis.com/ademanos-f242e.appspot.com/LSM_Hogar_Web/Vaso_Web.m4v</string>
    <string name="test_quizz">Quizz Hogar</string>
    <string name="test_quiz_prompt">Indica la opción correcta</string>
    <string name="correct_quiz_answer_message">RESPUESTA CORRECTA</string>
    <string name="incorrect_quiz_answer_message">RESPUESTA INCORRECTA</string>
    <string name="continue_quiz_button">Continuar</string>
    <string name="test_quiz_media_tag">https://storage.googleapis.com/ademanos-f242e.appspot.com/LSM_Hogar_Web/Gas_Web.m4v</string>
    <string name="test_quiz_incorrect_answer">VENTANA</string>
    <string name="test_quiz_correct_answer_1">GAS</string>
    <string name="test_quiz_correct_answer_2">FOCO</string>
    <string name="test_quiz_correct_answer_3">CAJA</string>
    <string name="test_quiz_correct_answer_4">VASO</string>
    <string name="test_quiz_correct_answer_5">CUCHARA</string>
    <string name="test_quiz_correct_answer_6">IMPRESORA</string>
    <string name="test_quiz_correct_answer_7">MESA</string>
    <string name="tag_levels_completed">tag_levels_completed</string>
    <string name="tag_words_consulted">tag_words_consulted</string>

</resources>