...
                    modifier = Modifier.semantics {
                        testTag=context.getString(R.string.tag_levels_completed)
                    }
                )
                Spacer(modifier = Modifier.width(4.dp))
                Text(
                    text = "niveles",
                    style = MaterialTheme.typography.titleSmall,
                    textAlign = TextAlign.Center,
                    color =  MaterialTheme.colorScheme.onPrimaryContainer,
                    modifier = Modifier.padding(vertical = 11.dp)
                )
            }
...
                    modifier = Modifier.semantics {
                        testTag=context.getString(R.string.tag_words_consulted)
                    }
                )
                Spacer(modifier = Modifier.width(4.dp))
                Text(
                    text = "palabras",
                    style = MaterialTheme.typography.titleSmall,
                    textAlign = TextAlign.Center,
                    color =  MaterialTheme.colorScheme.onPrimaryContainer,
                    modifier = Modifier.padding(vertical = 11.dp)
                )
            }
...
